methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:4: error: not found: value faireV
faireV(c: Color)
^MethodsPicture:4: error: not found: value c
faireV(c: Color)
       ^MethodsPicture:8: error: type yellow is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.yellow)
                           ^MethodsPicture:8: error: not found: value c
  setCouleurBrosse(c:Color.yellow)
                   ^MethodsPicture:22: error: type red is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.red)
                           ^MethodsPicture:22: error: not found: value c
  setCouleurBrosse(c:Color.red)
                   ^MethodsPicture:36: error: type blue is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.blue)
                           ^MethodsPicture:36: error: not found: value c
  setCouleurBrosse(c:Color.blue)
                   ^MethodsPicture:50: error: type green is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.green)
                           ^MethodsPicture:50: error: not found: value c
  setCouleurBrosse(c:Color.green)
                   ^