methods.picture.MethodsPicture.scala.code
override def run() {
}

faireV(c: Color)
{
  avance();
  baisseBrosse();
  setCouleurBrosse(c:Color.yellow)
  leveBrosse();
  droite();
  avance();
  baisseBrosse();
  recule();
  leveBrosse();
  droite();
  avance();
  baisseBrosse();
  avance();
  droite();
  avance();
  baisseBrosse();
  setCouleurBrosse(c:Color.red)
  leveBrosse();
  droite();
  avance();
  baisseBrosse();
  recule();
  leveBrosse();
  droite();
  avance();
  baisseBrosse();
  avance();
  droite();
  avance();
  baisseBrosse();
  setCouleurBrosse(c:Color.blue)
  leveBrosse();
  droite();
  avance();
  baisseBrosse();
  recule();
  leveBrosse();
  droite();
  avance();
  baisseBrosse();
  avance();
  droite();
  avance();
  baisseBrosse();
  setCouleurBrosse(c:Color.green)
  leveBrosse();
  droite();
  avance();
  baisseBrosse();
  recule();
  leveBrosse();
  droite();
  avance();
  baisseBrosse();
  avance();
  droite();


}

